# skfmath

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
inc/: CMakeLists.txt  skfmath.h  skfmath_helpers.h  skfmath_int.h  skfmath_structs.h
src/: CMakeLists.txt  skfmath.c  skfmath_int.c
